--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="topBox">
 
     	<div class="pictureBox">
-    	<img src="img/computer.png" alt="">
+    	<img src="img/sun.png" alt="">
     	</div>
     		<div class="topTextBox">
-    		<p class="titleText">XXXXXXXXX</p>
+    		<p class="titleText">何伟能</p>
 				<div class="titleLine"></div>
-			<p class="contentText"><br>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX<br>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX<br>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX<br>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX<br>XXXXXXXXXXXXXXXXXXXXXXX<br></p>
-			<div class="topButton">XXXXXXXX<span>></span></div>
+			<p class="contentText"><br>举世誉之而不加劝 <br><br>举世非之而不加沮 <br><br>定乎内外之分 <br><br>辨乎荣辱之境<br><br></p>
+			<div class="topButton">2021/5/13</div>
     		</div>
     </div>
 
@@ -32,29 +32,29 @@
 		<hr class="line"></hr>
 		<div class="midBoxContent">
 			<div class="midBoxContent1">
-				2016.09.09<span class="midBoxContentButton1">XX</span><u>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</u>
+				2020.09.09<span class="midBoxContentButton1">XX</span><u>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</u>
 			</div>
 			<div class="midBoxContent1">
-				2016.06.14<span class="midBoxContentButton2">XXXXX</span><u>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</u>
+				2020.06.14<span class="midBoxContentButton2">XXXXX</span><u>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</u>
 			</div>
 			<div class="midBoxContent1">
-				2016.05.17<span class="midBoxContentButton2">XXXXX</span><u>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</u>
+				2020.05.17<span class="midBoxContentButton2">XXXXX</span><u>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</u>
 			</div>
 		</div>
 
 		<div class="bottomBoxLeft">
 			<div class="bottomBoxTitle">
 				<div class="bottomBoxTitleBox"></div>
-				XXXXXXXXXXXXXXXXXXX
+				个人信息
 			</div>
 			<div class="bottomBoxContent">
-				<br><div class="bottomContentBox1">XXXXXXXXXXXXXXX</div>
+				<br><div class="bottomContentBox1">电话</div>
 				<div class="bottomContentBox2">
-					<b>06-6121-6103</b>
+					<b>137-XXXX-4112</b>
 				</div>
 				<div class="bottomContentBox3">
-					XXXXXXXXXXXXXXXXXXXXXX<br>
-					XXXXXXXXXXXXXXXXXXX
+					学历:本科<br>
+					学校:杭州师范大学
 				</div>
 				<div class="bottomContentBox4">
 					XXXXXX/ XXXX:XX~XX:XX
@@ -65,13 +65,13 @@
 			<div class="bottomBoxTitle">
 				<div class="bottomBoxTitleBox">
 				</div>
-				XXXXXXXXXXXXXXXXX
+				邮箱地址
 			</div>
 			<div class="bottomBoxContent">
 				<div class="bottomBoxContentButton">
 					<div class="letter1"></div>
 					<div class="letter2"></div>
-					XXXXXXXXXXXXXXXXXX
+					1550780539@qq.com
 					<div class="buttonPoint">
 						
 					</div>
